--- a/custom.css
+++ b/custom.css
@@ -59,6 +59,11 @@ body{
     height: 10vw;
     object-fit: cover;
 }
+.card-img-top2 {
+    width: 100%;
+    height: 10vw;
+    object-fit: cover;
+}
 footer a{
     color: white;
     text-decoration: none !important;
@@ -103,16 +108,63 @@ card a{
         font-weight: bold!important;
     }
 
-
-    .card-img-top {
-        width: 100%;
-        height: 35vw;
-        object-fit: cover;
-    }
     .img-carousel {
         width: 100%;
         height: 54vw;
         object-fit: cover;
     }
 }
+@media (min-width: 768px) and (max-width: 992px) {
+    .card-img-top {
+        width: 100%;
+        height: 15vw;
+        object-fit: cover;
+    }
+    .card-img-top2 {
+        width: 100%;
+        height: 25vw;
+        object-fit: cover;
+    }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+    .card-img-top {
+        width: 100%;
+        height: 20vw;
+        object-fit: cover;
+    }
+    .card-img-top2 {
+        width: 100%;
+        height: 30vw;
+        object-fit: cover;
+    }
+}
+@media screen and (max-width: 576px) {
+    .card-img-top {
+        width: 100%;
+        height: 30vw;
+        object-fit: cover;
+    }
+    .card-img-top2 {
+        width: 100%;
+        height: 40vw;
+        object-fit: cover;
+    }
+
+}
+
+
+
+
+a .news-card:hover {
+    -webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.5);
+
+}
+
+.news-topic a{
+    color: white;
+    text-decoration: none !important;
+}
+
 
