--- a/custom.css
+++ b/custom.css
@@ -6,12 +6,23 @@ html {
 body {
     overflow-x: hidden;
 }
-.container{
-    overflow-x: hidden;
-}
+
+
 
 .navbar{
     width: 100%;
+}
+
+.news-card .card-body {
+    padding: 5px 10px 10px;
+}
+
+.news-card .card-body p {
+    font-size: 11px;
+}
+
+.news-card .card-body h5  {
+    font-size: 15px;
 }
 
 .elipsis-2-lines{
@@ -129,6 +140,9 @@ card a{
         width: 100%;
         height: 54vw;
         object-fit: cover;
+    }
+    main{
+        overflow-x: hidden;
     }
 }
 @media (min-width: 768px) and (max-width: 992px) {
